--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<html>
-	<head>
-		<title>web development</title>
-	</head>
-	<body>
-		<p>
-		hello web!
-		</p>
-	</body>
-</html>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+	
+</head>
+<body>
+	<script src="script.js"></script>
+	<div class="main">
+<div class="box1"><img src="./src/img/1.jpg" alt="first" id="img1" >
+	</div>
+	<div class="box2"><img src="./src/img/2.jpg" alt="second" id="img2">
+	</div>
+	<div class="box3"><img src="./src/img/3.jpg" alt="third" id="img3">
+	</div>	
+</div>
+	<div class="box"></div>
+</body>
+</html>
